// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FieldError rendering renders expected elements 1`] = `
<div
  aria-live="polite"
  className="FieldError"
  id="test"
>
  Test
</div>
`;

exports[`FieldError rendering renders expected elements when text is not set 1`] = `
<div
  aria-live="polite"
  className="FieldError"
  id="test"
>
   
</div>
`;
